feedback from usertests implemented